# ttb2

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  export.bat  export.sh  requirements.txt  setup.py  test_import.py
.github/workflows/: ci.yml  release-deb.yml
cmake/: FindCursesPanel.cmake
include/: book_db.h  csv.h  db_manager.h  errors.h  panel_manager.h  pdf.h  python_bridge.h  seekdb.h  settings.h  table_ops.h  table_view.h  tablecraft.h  ttb_io.h  ui.h  ui_history.h  ui_loading.h  workspace.h  xl.h
include/core/: errors.h  progress.h  settings.h  task_worker.h  terminal_compat.h  workspace.h
include/data/: table.h  table_ops.h  table_view.h
include/db/: book_db.h  db_manager.h  seekdb.h
include/io/: csv.h  pdf.h  ttb_io.h  xl.h
include/ui/: dialog_internal.h  internal.h  panel_manager.h  ui.h  ui_history.h  ui_loading.h  ui_text.h
include/vector/: table_index.h
python/: export.py
src/: csv.c  db_manager.c  errors.c  main.c  py_tablecraft_module.c  python_bridge.c  settings.c  table.c  table_ops.c  table_view.c  ui.c  ui_draw.c  ui_edit.c  ui_loop.c  ui_prompt.c  workspace.c
src/core/: task_worker.c  terminal_compat.c
src/db/: book_db.c  db_manager.c  seekdb.c
src/io/: csv.c  pdf.c  ttb_io.c  xl.c
src/parser/: csv.c  pdf.c  ttb_io.c  xl.c
src/ui/: panel_manager.c  ui_db.c  ui_draw.c  ui_edit.c  ui_file.c  ui_history.c  ui_init.c  ui_loading.c  ui_loop.c  ui_prompt.c  ui_seek.c  ui_settings.c  ui_text.c
src/ui/core/: ui_core.c  ui_format.c  ui_search_service.c  ui_state.c  ui_view.c
src/ui/data/: ui_history.c  ui_seek.c
src/ui/dialog/: ui_dialog_common.c  ui_dialog_db.c  ui_dialog_edit.c  ui_dialog_export.c  ui_dialog_file.c  ui_dialog_settings.c  ui_dialog_table.c  ui_dialog_text.c
src/ui/input/: ui_input_modes.c  ui_input_mouse.c  ui_input_nav.c  ui_input_search.c  ui_loop.c
src/ui/panel/: panel_manager.c
src/ui/render/: ui_draw.c  ui_render_footer.c  ui_render_grid.c  ui_render_layout.c  ui_render_text.c
src/ui/ui_core/: ui_format.c  ui_search_service.c  ui_state.c
src/ui/ui_data/: ui_history.c
src/ui/ui_dialog/: ui_dialog_common.c  ui_dialog_export.c  ui_dialog_file.c  ui_dialog_settings.c  ui_dialog_table.c  ui_dialog_text.c
src/ui/ui_input/: ui_input_modes.c  ui_input_nav.c  ui_input_search.c  ui_loop.c
src/ui/ui_render/: ui_draw.c  ui_render_footer.c  ui_render_grid.c
src/vector/: table_index.c
tests/: bookdb_semantic_test.c  settings_test.c  table_index_test.c  ui_dialog_list_test.c  ui_history_test.c
tools/: seekdb_bench.c
